need to fix spacing on second nav bar

--- a/shop_app/static/style.css
+++ b/shop_app/static/style.css
@@ -12,7 +12,10 @@ body {
     -webkit-background-size:160px 160px;
     -moz-background-size:160px 160px;
     background-size:160px 160px;
-    padding-bottom: 50px;
+    /*padding-bottom: 100px;*/
+    /*padding-top: 250px;*/
+    margin-top: 180px;
+    /*z-index: 0;*/
 }
 
 p {
@@ -36,6 +39,22 @@ p {
         1px -1px 0 #000,
         -1px 1px 0 #000,
         1px 1px 0 #000;
+}
+
+.vendor-biz-AboutPg {
+    font-family: 'Rozha One', serif;
+    font-size: 30px;
+    color: black;
+}
+
+.vendor-biz-AboutPg:hover {
+    color: white;
+    text-shadow:
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
+    text-decoration: none;
 }
 
 .vendor-name {
@@ -62,11 +81,25 @@ p {
     border-radius: 10px;
 }
 
-.navbar-fixed-top, nav, thead, .last-tr td  {
-    margin-bottom: 0px; 
+.navbar-fixed-top, thead, .last-tr td  {
+    margin-bottom: -20px; 
     padding-top: 20px;
-    /*padding-bottom: 20px;*/
+    padding-bottom: 20px;
     background-color: #B9F7D6;
+}
+
+.navbar2 {
+    z-index: 0;
+    border-top: solid #333 2px;
+}
+
+.nav2ul {
+    padding-top: 4px;
+}
+
+.navbar ul li.active-page {
+  background-color:white;
+  border-radius: 10px;
 }
 
 .brought-by {
@@ -83,19 +116,25 @@ p {
     font-size: 30px;
 }
 
+.popshop-AboutPg {
+    font-family: 'Delius Swash Caps', cursive;
+    font-size: 50px;
+}
+
+#about-popshop {
+    margin-top: -25px;
+}
+
 #category-nav {
     margin-top: -40px;
 }
 
-nav ul li {
+.navbar ul li {
     font-family: 'Rozha One', serif;
     font-size: 16px;
 }
 
-nav ul li.active-page {
-  background-color:white;
-  border-radius: 10px;
-}
+
 
 .dropdown-toggle {
     font-family: 'Delius Swash Caps', cursive;
@@ -112,6 +151,14 @@ nav ul li.active-page {
 .caption {
     text-align: center;
     font-family: 'Rozha One', serif;
+}
+
+.index-card {
+    text-align: center;
+    padding-top: 10px;
+    width: 300px;
+    margin: 5px;
+    background-color: white;
 }
 
 /* CATEGORY HEADINGS AND LOGIN/SIGN UP HEADING */
@@ -163,23 +210,6 @@ nav ul li.active-page {
     border-radius: 5px;
 }
 
-footer {
-    background-color: #B9F7D6;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    /*margin-top: 200px;*/
-}
-
-footer li {
-    font-family: 'Delius Swash Caps', cursive;
-    color: black;
-    list-style-type: none;
-    padding: 5px;
-    text-align: center;
-    font-weight: bold;
-}
-
 /* Previously Featured Page Stying*/
 #jumbo {
     padding: 10px;
@@ -199,4 +229,5 @@ footer li {
 .btn {
     font-family: monospace;
 }
+
 
